feat: 基于 LLM 的多 Agent 分诊就医系统
- Spring AI 1.0.0 + DeepSeek 多 Agent 编排层（分诊顾问/报告解读/预约管家）
- Supervisor 规划层：组合请求应急分诊优先（plan 事件可视化，0 LLM 确定性路径）
- 会话事实协作：SessionFactStore EMERGENCY 拦截预约，澄清放行
- 分诊状态机：红旗短路 + 部位/时长/伴随多轮澄清（离线可演示）
- RAG 溯源 + 防注入；双护栏 Advisor 链；BeanOutputConverter + JSON Schema + 重试兜底
- 预约两步确认（sha256 幂等键 + Redis 预占 + DB 唯一索引）
- 前端透明推理页：SSE 流式 + 编排决策/工具/来源/分诊卡可视化
- 可观测 metrics；G1-G10 评估 9.4/10；功能验证报告